--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -1,58 +1,53 @@
 <div class="row">
     <div class="col-lg-12">
-        <div class="card" id="contactList" style="height: 830px; position: relative; background-image: url('../../../../assets/images/tesis/ImageIntroduction.png'); background-size: cover; overflow: hidden;">
+        <div class="card" id="contactList" style="height: 830px; position: relative; background-image: url('../../../../assets/images/tesis/ImageIntroduction.jpg'); background-size: cover; overflow: hidden;">
             <!-- Capa para aplicar opacidad -->
-
-            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.2); z-index: 1;"></div>
+            <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.1); z-index: 1;"></div>
             <!-- Bloque azul con información rápida -->
-
             <!-- Contenido dentro de la tarjeta -->
-            <div class="card-body" style="position: relative; z-index: 3; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-              <div style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; background-color: #3498db; z-index: 2; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 0 20px;">
-                <!-- Contenido del bloque azul -->
-                <div>
-                    <h3 style="color: white;">¡Descubre lo que nuestra aplicación tiene para ofrecer!</h3>
-                    <p style="color: white;">Obtén una visión completa de nuestra aplicación y su impacto en la prevención del consumo de sustancias. Accede a contenido detallado, videos instructivos de la aplicación y el significado de las variables del modelo utilizado.</p>
+            <div class="card-body" style="position: relative; z-index: 3; display: flex; flex-direction: column; align-items: flex-start;">
+                <div style="position: absolute; top: 20px; left: 0; width: 100%; height: 100px; background-color: #08273b; z-index: 2; border-bottom-right-radius: 10px; border-bottom-left-radius: 10px; display: flex; flex-direction: row; justify-content: space-between; align-items: center; padding: 0 20px;">
+                    <!-- Contenido del bloque azul -->
+                    <div>
+                        <h3 style="color: white;">¡Descubre lo que nuestra aplicación tiene para ofrecer!</h3>
+                        <p style="color: white;">Obtén una visión completa de nuestra aplicación y su impacto en la prevención del consumo de sustancias. Accede a contenido detallado, videos instructivos de la aplicación y el significado de las variables del modelo utilizado.</p>
+                    </div>
+                    <!-- Botón de "Más Información" -->
+                    <button style="background-color: #3498db; color: white; border: none; border-radius: 5px; padding: 8px 16px; cursor: pointer;" (click)="masInfo()">Más Información</button>
                 </div>
-                <!-- Botón de "Más Información" -->
-                <button style="background-color: white; color: #3498db; border: none; border-radius: 5px; padding: 8px 16px; cursor: pointer;" (click)="masInfo()">Más Información</button>
-                </div>
-                <br><br><br><br>
-                <h2 style="color: white; text-align: center;">Un Futuro sin Riesgos: Tu Apoyo en la Prevención de las Adicciones</h2><br><br><br><br>
-                <p style="color: white; text-align: center; font-size: 16px;">Nuestra aplicación previene el consumo de sustancias psicoactivas, con predicciones de riesgo e información de cuales fueron los factores de riesgo mas influyentes.</p><br><br><br>
+                <br><br><br><br><br><br><br>
+                <h2 style="color: #08273b; text-align: left;">Un Futuro sin Riesgos: Tu Apoyo en la Prevención de las Adicciones</h2><br><br><br>
+                <p style="color: #08273b; text-align: left; font-size: 16px;">Nuestra aplicación previene el consumo de sustancias psicoactivas, <br>con predicciones de riesgo e información de cuales fueron los factores de riesgo mas influyentes.</p><br><br>
                 <!-- Otro contenido aquí si es necesario -->
                 <!-- Botón "Predecir" -->
-                <button style="background-color: #3498db; color: white; border: none; border-radius: 10px; padding: 15px 30px; font-size: 18px; font-weight: bold; margin-top: 20px; cursor: pointer;" (click)="dirigirFormulario()">Predecir</button>
-                <br><br><br><br>
+                <button style="background-color: #08273b; color: white; border: none; border-radius: 10px; padding: 15px 30px; font-size: 18px; font-weight: bold; margin-top: 0px; margin-right: 50px; cursor: pointer;" (click)="dirigirFormulario()">Interactuar con el modelo</button>
+                <br><br><br>
                 <!-- Beneficios de la app -->
-                <div style="display: flex; align-items: center; justify-content: center; margin-top: 20px;">
+                <div style="display: flex; flex-direction: row;">
                     <!-- Icono y texto 1 -->
-                    <div style="display: flex; align-items: center;">
+                    <div style="display: flex; align-items: center; margin-right: 20px;">
                         <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                        <span style="color: white; font-size: 16px;">Prevención personalizada</span>
+                        <span style="color: #08273b; font-size: 16px;">Prevención personalizada</span>
                     </div>
-
                     <!-- Icono y texto 2 -->
-                    <div style="display: flex; align-items: center; margin-left: 20px; margin-right: 20px;">
+                    <div style="display: flex; align-items: center; margin-right: 20px;">
                         <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                        <span style="color: white; font-size: 16px;">Datos Significativos</span>
+                        <span style="color: #08273b; font-size: 16px;">Datos Significativos</span>
                     </div>
-
                     <!-- Icono y texto 3 -->
-                    <div style="display: flex; align-items: center;">
+                    <div style="display: flex; align-items: center; margin-right: 20px;">
                         <img src="../../../../assets/images/tesis/verify.png" alt="Icono" style="width: 30px; height: 30px; margin-right: 5px;">
-                        <span style="color: white; font-size: 16px;">Intervención Rápida</span>
+                        <span style="color: #08273b; font-size: 16px;">Intervención Rápida</span>
                     </div>
-
+                </div>
             </div>
-
         </div>
     </div><!--end col-->
     <div id="informacion" class="row">
         <div class="col-lg-12">
             <div class="card" id="contactList" style="height: 830px; position: relative; background-image: url('../../../../assets/images/tesis/stop-drug.jpg'); background-size: cover; overflow: hidden;">
 
-                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.2); z-index: 1;"></div>
+                <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.1); z-index: 1;"></div>
             
                 <!-- Contenido dentro de la tarjeta -->
                 <div class="card-body" style="position: relative; z-index: 3; display: flex; flex-direction: column; justify-content: center; align-items: center;">
