Listos cambios para formulario y dessactivado customizer

--- a/Admin/src/app/layouts/rightsidebar/rightsidebar.component.html
+++ b/Admin/src/app/layouts/rightsidebar/rightsidebar.component.html
@@ -13,15 +13,15 @@
     </div>
 </div>
 
-<div class="customizer-setting d-none d-md-block">
+<!-- <div class="customizer-setting d-none d-md-block">
     <div class="btn btn-info p-2 text-uppercase rounded-end-0 shadow-lg" (click)="openEnd()">
         <i class="bi bi-gear mb-1"></i> Customizer
     </div>
-</div>
+</div> -->
 
 <!-- Theme Settings -->
 
-<div class="custom-offcanvas righsidebar">
+<!-- <div class="custom-offcanvas righsidebar">
     <div class="d-flex align-items-center bg-primary bg-gradient p-3 offcanvas-header">
         <div class="me-2">
             <h5 class="mb-1 text-white">Steex Builder</h5>
@@ -109,7 +109,7 @@
                     </div>
                     <h5 class="fs-sm text-center fw-medium mt-2">Two Column</h5>
                 </div>
-                <!-- end col -->
+
             </div>
 
             <h6 class="mt-4 fs-md mb-1">Theme</h6>
@@ -498,7 +498,7 @@
                 </div>
             </div>
 
-            <!-- <div *ngIf="layout === 'vertical' || layout === 'twocolumn'" id="sidebar-color"> -->
+
             <h6 class="mt-4 fs-md mb-1">Sidebar Color</h6>
             <p class="text-muted fs-sm">Choose a color of Sidebar.</p>
 
@@ -573,7 +573,7 @@
                     <h5 class="fs-sm text-center fw-medium mt-2">Gradient</h5>
                 </div>
             </div>
-            <!-- end row -->
+
 
             <div class="collapse" id="collapseBgGradient">
                 <div class="d-flex gap-2 flex-wrap img-switch p-2 px-3 bg-light rounded">
@@ -672,13 +672,13 @@
                                         </span>
                                     </span>
                                 </span>
-                                <!-- <div id="preloader"> -->
+
                                 <span class="d-flex align-items-center justify-content-center">
                                     <span class="spinner-border text-primary avatar-xxs m-auto" role="status">
                                         <span class="visually-hidden">Loading...</span>
                                     </span>
                                 </span>
-                                <!-- </div> -->
+
                             </label>
                         </div>
                         <h5 class="fs-sm text-center fw-medium mt-2">Enable</h5>
@@ -709,10 +709,9 @@
                     </div>
                 </div>
 
-            </div><!-- end preloader-menu -->
+
         </div>
     </div>
-</div>
-<!-- </div>s -->
-<!-- <ngx-spinner type="ball-scale-multiple"></ngx-spinner> -->
+</div> -->
+
 <div class="offcanvas-backdrop fade backdrop2 hidden" id="backdrop" (click)="closeoffcanvas()"></div>
