Agregado componente para informacion

--- a/Admin/src/app/pages/dashboards/index/index.component.html
+++ b/Admin/src/app/pages/dashboards/index/index.component.html
@@ -13,7 +13,7 @@
                         <p style="color: white;">Obtén una visión completa de nuestra aplicación y su impacto en la prevención del consumo de sustancias. Accede a contenido detallado, videos instructivos de la aplicación y el significado de las variables del modelo utilizado.</p>
                     </div>
                     <!-- Botón de "Más Información" -->
-                    <button style="background-color: #3498db; color: white; border: none; border-radius: 5px; padding: 8px 16px; cursor: pointer;" (click)="masInfo()">Más Información</button>
+                    <button style="background-color: #3498db; color: white; border: none; border-radius: 5px; padding: 8px 16px; cursor: pointer;" (click)="dirigirInfoComponente()">Más Información</button>
                 </div>
                 <br><br><br><br><br><br><br>
                 <h2 style="color: #08273b; text-align: left;">Un Futuro sin Riesgos: Tu Apoyo en la Prevención de las Adicciones</h2><br><br><br>
@@ -48,7 +48,7 @@
             <div class="card" id="contactList" style="height: 830px; position: relative; background-image: url('../../../../assets/images/tesis/stop-drug.jpg'); background-size: cover; overflow: hidden;">
 
                 <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(255, 255, 255, 0.1); z-index: 1;"></div>
-            
+
                 <!-- Contenido dentro de la tarjeta -->
                 <div class="card-body" style="position: relative; z-index: 3; display: flex; flex-direction: column; justify-content: center; align-items: center;">
                     <br><br>
@@ -63,8 +63,8 @@
                     <!-- Otro contenido aquí si es necesario -->
                     <br><br>
                     <!-- Beneficios de la app -->
-      
-      
+
+
             </div>
           </div>
         </div><!--end col-->
