--- a/Admin/src/app/pages/dashboards/info-app/info-app.component.html
+++ b/Admin/src/app/pages/dashboards/info-app/info-app.component.html
@@ -58,9 +58,30 @@
               <h3 class="card-title flex-grow-1 mb-0">Consecuencias de consumir marihuana, basuco y cocaína</h3>
           </div>
           <div class="card-body px-0">
-            <p style="font-size: 15px;">El set de datos utilizado para la creación del modelo predictivo se tomó a partir de la Encuesta Nacional de Consumo de Sustancias Psicoactivas en Población General - ENCSPA- 2019, una ecuesta realizada por Departamento Administrativo Nacional de Estadística DANE.</p>
-            <p style="font-size: 15px;">La encuesta fue realizada con el fin de conocer la situación de las personas a partir de diferentes preguntas que se realizaron, tanto preguntas de caracter informativo como edad, etnia, lugar de vivienda, entre otros, asi mismo preguntas acerca del consumo de alcohol y sustancias psicoactivas ilegales.</p>
-            <p style="font-size: 15px;">Si desea conocer mas información sobre el set de datos usado puede ingresar al siguiente link: <a href="https://microdatos.dane.gov.co/index.php/catalog/680/study-description">Link de acceso al set de datos</a>.</p>
+            <div class="table-responsive" style="min-width: 80%; max-width: 70%; margin-left: auto; margin-right: auto;">
+              <table class="table table-striped table-hover mb-0">
+                  <thead class="custom-thead">
+                      <tr>
+                          <th scope="col" >Sustancia Psicoactiva</th>
+                          <th scope="col" >Consecuencia de su consumo</th>
+                      </tr>
+                  </thead>
+                  <tbody class="list">
+                    <tr>
+                        <td>Marihuana</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                      <td>Cocaína</td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>Basuco</td>
+                      <td></td>
+                    </tr><!-- end tr -->
+                  </tbody><!-- end tbody -->
+              </table><!-- end table -->
+            </div>
           </div>
       </div>
   </div><!--end col-->
